--- a/Vue/Vue_VS创建模板/VuejsApp/VuejsApp/src/assets/Css/Style.css
+++ b/Vue/Vue_VS创建模板/VuejsApp/VuejsApp/src/assets/Css/Style.css
@@ -1,21 +1,41 @@
-.el-input__inner{
+.el-input__inner {
     height: 32px;
     line-height: 32px;
 }
 
-.el-button{
+.el-button {
     padding: 8px 20px;
 }
+
 
 /* .el-form-item{
     margin-bottom: 0px;
 } */
-.el-col-1{
+
+.el-col-1 {
     text-align: center;
 }
-.el-form-item__label{
-    padding: 0 11px 0 0 ;
+
+.el-form-item__label {
+    padding: 0 11px 0 0;
 }
-.el-main{
+
+.el-main {
     padding-top: 0px;
+}
+
+.el-divider--horizontal {
+    margin: 10px 0px !important;
+}
+
+.el-upload--picture-card {
+    width: 148px;
+    height: 148px;
+    line-height: 146px;
+}
+
+.el-upload__tip {
+    display: inline-block;
+    line-height: 146px;
+    margin-left: 10px;
 }
